--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNFirebaseStarter",
+  "name": "snag",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -23,7 +23,10 @@
   "dependencies": {
     "fbjs": "^0.8.17",
     "react": "^16.3.2",
-    "react-native": "^0.55.3",
-    "react-native-firebase": "^4.3.6"
+    "react-native": "^0.55.4",
+    "react-native-elements": "^0.19.1",
+    "react-native-firebase": "^4.3.6",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.13.0"
   }
 }
