--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,4 +28,10 @@ target 'snag' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
