--- a/ios/snag/Info.plist
+++ b/ios/snag/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Need to save a picture to the camera roll.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need access to camera roll.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need access to camera.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
