--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,39 +155,45 @@ android {
 dependencies {
     compile project(':rn-fetch-blob')
     compile project(':react-native-firebase')
-    compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
-  implementation(project(':react-native-firebase')) {
-    transitive = false
-  }
+    compile 'com.android.support:exifinterface:26.+'
 
-  implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
-    transitive = true
-  }
+    implementation (project(':react-native-camera')) {
+      exclude group: "com.android.support"
+    }
 
-  // RNFirebase required dependencies
-  implementation "com.google.firebase:firebase-core:16.0.1"
-  implementation "com.google.android.gms:play-services-base:15.0.1"
 
-  // RNFirebase optional dependencies
-  implementation "com.google.firebase:firebase-ads:15.0.1"
-  implementation "com.google.firebase:firebase-auth:16.0.2"
-  implementation "com.google.firebase:firebase-config:16.0.0"
-  implementation "com.google.firebase:firebase-crash:16.0.1"
-  implementation "com.google.firebase:firebase-database:16.0.1"
-  implementation "com.google.firebase:firebase-firestore:17.0.2"
-  implementation "com.google.firebase:firebase-functions:16.0.1"
-  implementation "com.google.firebase:firebase-invites:16.0.1"
-  implementation "com.google.firebase:firebase-storage:16.0.1"
-  implementation "com.google.firebase:firebase-messaging:17.1.0"
-  implementation "com.google.firebase:firebase-perf:16.0.0"
+    implementation(project(':react-native-firebase')) {
+      transitive = false
+    }
 
-  implementation "com.facebook.react:react-native:+"
-  implementation "com.android.support:appcompat-v7:27.1.1"
-  implementation 'com.android.support:support-annotations:27.1.1'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
+      transitive = true
+    }
 
-  implementation fileTree(dir: "libs", include: ["*.jar"])
-  implementation "com.facebook.react:react-native:+"  // From node_modules
+    // RNFirebase required dependencies
+    implementation "com.google.firebase:firebase-core:16.0.1"
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+
+    // RNFirebase optional dependencies
+    implementation "com.google.firebase:firebase-ads:15.0.1"
+    implementation "com.google.firebase:firebase-auth:16.0.2"
+    implementation "com.google.firebase:firebase-config:16.0.0"
+    implementation "com.google.firebase:firebase-crash:16.0.1"
+    implementation "com.google.firebase:firebase-database:16.0.1"
+    implementation "com.google.firebase:firebase-firestore:17.0.2"
+    implementation "com.google.firebase:firebase-functions:16.0.1"
+    implementation "com.google.firebase:firebase-invites:16.0.1"
+    implementation "com.google.firebase:firebase-storage:16.0.1"
+    implementation "com.google.firebase:firebase-messaging:17.1.0"
+    implementation "com.google.firebase:firebase-perf:16.0.0"
+
+    implementation "com.facebook.react:react-native:+"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'com.android.support:support-annotations:27.1.1'
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
@@ -198,3 +204,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
