--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.google.gms:google-services:4.0.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
         classpath 'io.fabric.tools:gradle:1.25.4'
@@ -26,6 +26,13 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
+        }
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force "com.google.android.gms:play-services-basement:15.0.1"
+            force "com.google.android.gms:play-services-tasks:15.0.1"
         }
     }
 }
