--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-jest": "^23.4.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "fs-extra": "^6.0.1",
     "jest": "^23.4.0",
@@ -21,6 +22,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "fbjs": "^0.8.17",
     "react": "^16.3.2",
     "react-native": "^0.55.4",
@@ -28,6 +30,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.3.6",
     "react-native-fit-image": "^1.5.4",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-picker-select": "^4.3.0",
     "react-native-responsive-image": "^2.3.1",
     "react-native-tab-view": "^1.0.2",
