--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,9 +29,22 @@ target 'snag' do
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
-
-  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
-
-  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
-
+  
+  # Fixes required for pod specs to work with rn 0.42
+  react_native_path = "../node_modules/react-native"
+  pod "yoga", :path => "#{react_native_path}/ReactCommon/yoga"
+  pod "React", :path => react_native_path, :subspecs => [
+      'Core',
+      'RCTActionSheet',
+      'RCTAnimation',
+      'RCTGeolocation',
+      'RCTImage',
+      'RCTLinkingIOS',
+      'RCTNetwork',
+      'RCTSettings',
+      'RCTText',
+      'RCTVibration',
+      'RCTWebSocket',
+      'DevSupport'
+  ]
 end
