--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.3.6",
     "react-native-fit-image": "^1.5.4",
+    "react-native-global-props": "^1.1.3",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-picker-select": "^4.3.0",
     "react-native-responsive-image": "^2.3.1",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.13.0",
-    "rn-fetch-blob": "^0.10.13"
+    "react-navigation": "^2.13.0"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
