--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,7 +108,7 @@ android {
   compileSdkVersion 27
 
   defaultConfig {
-    applicationId "com.snag.snag"
+    applicationId "com.eamon.snag"
     minSdkVersion 18
     targetSdkVersion 27
     versionCode 1
@@ -153,10 +153,13 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-camera')
-    compile project(':rn-fetch-blob')
-    compile project(':react-native-firebase')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-firebase')
+    compile project(':react-native-camera')
+    implementation project(':react-native-camera')
+    implementation project(':rn-fetch-blob')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-vector-icons')
     compile 'com.android.support:exifinterface:26.+'
 
     implementation (project(':react-native-camera')) {
