--- a/ios/snagit.xcodeproj/xcshareddata/xcschemes/snag.xcscheme
+++ b/ios/snagit.xcodeproj/xcshareddata/xcschemes/snag.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2E721003944BFBD5F7DD3AA23B6F9E09"
+               BuildableName = "libReact.a"
+               BlueprintName = "React"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "snag.app"
                BlueprintName = "snag"
@@ -32,6 +46,20 @@
                BuildableName = "snagTests.xctest"
                BlueprintName = "snagTests"
                ReferencedContainer = "container:snag.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "58B511DA1A9E6C8500147676"
+               BuildableName = "libRCTLinking.a"
+               BlueprintName = "RCTLinking"
+               ReferencedContainer = "container:../node_modules/react-native/Libraries/LinkingIOS/RCTLinking.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
