--- a/ios/snagit/GoogleService-Info.plist
+++ b/ios/snagit/GoogleService-Info.plist
@@ -7,33 +7,33 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>599782590095-77psuq44qcq287unca05im6l2n29ca7a.apps.googleusercontent.com</string>
+	<string>599782590095-ptaat4fnms6i4fci8gd2e6m5gd2qri5m.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.599782590095-77psuq44qcq287unca05im6l2n29ca7a</string>
+	<string>com.googleusercontent.apps.599782590095-ptaat4fnms6i4fci8gd2e6m5gd2qri5m</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCYq6a8jyE0W56pW2uGI1HrO0m2aB_iFUA</string>
+	<string>AAAAi6XUBo8:APA91bEtuBBlS77ksrTjZVjOggj7-zi83elyuMPptqltnK-y8WFkqNiQOa-QDDeaRVBkjOXn-d1Sj5GgxlaaTm5d0D3ffQ7uw4XwP5GdAC6wlD4-BwkEyTkye8Gpv_Wz1gPbbxzCdHwf</string>
 	<key>GCM_SENDER_ID</key>
 	<string>599782590095</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.snag.snag</string>
+	<string>com.eamon.snag</string>
 	<key>PROJECT_ID</key>
 	<string>snag-b2b2d</string>
 	<key>STORAGE_BUCKET</key>
 	<string>snag-b2b2d.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:599782590095:ios:20c017f2c2d432a5</string>
+	<string>1:599782590095:ios:69cdc7feb62137c8</string>
 	<key>DATABASE_URL</key>
 	<string>https://snag-b2b2d.firebaseio.com</string>
 </dict>
