--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snag",
+  "name": "snagit",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -31,10 +31,7 @@
     "react-native-firebase": "^4.3.6",
     "react-native-fit-image": "^1.5.4",
     "react-native-global-props": "^1.1.3",
-    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-picker-select": "^4.3.0",
-    "react-native-responsive-image": "^2.3.1",
-    "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0"
   },
