--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-firebase": "^4.3.6",
     "react-native-fit-image": "^1.5.4",
     "react-native-global-props": "^1.1.3",
+    "react-native-modal": "^6.5.0",
     "react-native-picker-select": "^4.3.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0"
