--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "immutable": "^3.8.2",
     "react": "^16.3.2",
     "react-native": "^0.55.4",
+    "react-native-awesome-alert": "^0.4.0",
     "react-native-calendars": "^1.20.0",
     "react-native-camera": "^1.2.0",
     "react-native-elements": "^0.19.1",
