added upload item image

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,4 +55,6 @@ target 'snagit' do
   ]
   pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
 end
