--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fs')
+    compile project(':react-native-uuid-generator')
     compile project(':react-native-fbsdk')
     compile project(':react-native-google-signin')
     compile project(':react-native-vector-icons')
