--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "fbjs": "^0.8.17",
+    "firebase": "^5.5.5",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
     "immutable": "^3.8.2",
@@ -37,12 +38,15 @@
     "react-native-firebase": "^4.3.6",
     "react-native-firebase-auth": "^1.0.1",
     "react-native-fit-image": "^1.5.4",
+    "react-native-fs": "^2.12.0",
     "react-native-global-props": "^1.1.3",
     "react-native-google-signin": "^1.0.0-rc6",
     "react-native-modal": "^6.5.0",
     "react-native-picker-select": "^4.3.0",
+    "react-native-uuid-generator": "^4.0.1",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.13.0"
+    "react-navigation": "^2.13.0",
+    "url": "^0.11.0"
   },
   "rnpm": {
     "assets": [
