--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,8 @@ buck-out/
 #
 .expo/
 /ios/Pods/
-# google-services.json
+/android/app/google-services.json
+/android/app/src/google-services.json
 # GoogleService-Info.plist
 
 /functions/serviceAccountKey.json
