--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,7 +105,8 @@ android {
   dexOptions {
     javaMaxHeapSize "4g"
   }
-  compileSdkVersion 27
+  compileSdkVersion 26
+  buildToolsVersion "26.0.2"
 
   defaultConfig {
     applicationId "com.eamon.snag"
@@ -153,18 +154,22 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fbsdk')
+    //implementation 'com.android.support:recyclerview-v7:+'
     compile project(':react-native-fs')
     compile project(':react-native-uuid-generator')
-    compile project(':react-native-fbsdk')
-    compile project(':react-native-google-signin')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-firebase')
-    compile project(':react-native-camera')
+    //implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.38.0'
+    implementation project(':react-native-fbsdk')
+    //compile project(':react-native-google-signin')
+    //compile project(':react-native-vector-icons')
+    //compile project(':react-native-firebase')
+    //compile project(':react-native-camera')
     implementation project(':react-native-camera')
-    implementation project(':rn-fetch-blob')
-    implementation project(':react-native-firebase')
+    //implementation project(':rn-fetch-blob')
+    //implementation project(':react-native-firebase')
     implementation project(':react-native-vector-icons')
-    compile 'com.android.support:exifinterface:26.+'
+    implementation "com.android.support:exifinterface:26.+"
 
     implementation (project(':react-native-camera')) {
       exclude group: "com.android.support"
@@ -180,28 +185,31 @@ dependencies {
     }
 
     // RNFirebase required dependencies
-    implementation "com.google.firebase:firebase-core:16.0.1"
-    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.4"
+    implementation "com.google.android.gms:play-services-base:16.0.1"
 
     // RNFirebase optional dependencies
-    implementation "com.google.firebase:firebase-ads:15.0.1"
-    implementation "com.google.firebase:firebase-auth:16.0.2"
-    implementation "com.google.firebase:firebase-config:16.0.0"
-    implementation "com.google.firebase:firebase-crash:16.0.1"
-    implementation "com.google.firebase:firebase-database:16.0.1"
-    implementation "com.google.firebase:firebase-firestore:17.0.2"
-    implementation "com.google.firebase:firebase-functions:16.0.1"
-    implementation "com.google.firebase:firebase-invites:16.0.1"
-    implementation "com.google.firebase:firebase-storage:16.0.1"
-    implementation "com.google.firebase:firebase-messaging:17.1.0"
-    implementation "com.google.firebase:firebase-perf:16.0.0"
+    //implementation "com.google.firebase:firebase-ads:17.0.0"
+    implementation "com.google.firebase:firebase-auth:16.0.5"
+    implementation "com.google.firebase:firebase-config:16.1.0"
+    implementation "com.google.firebase:firebase-crash:16.2.1"
+    implementation "com.google.firebase:firebase-database:16.0.4"
+    implementation "com.google.firebase:firebase-firestore:17.1.2"
+    implementation "com.google.firebase:firebase-functions:16.1.2"
+    implementation "com.google.firebase:firebase-invites:16.0.4"
+    implementation "com.google.firebase:firebase-storage:16.0.4"
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation "com.google.firebase:firebase-perf:16.2.0"
 
-    implementation "com.facebook.react:react-native:+"
-    implementation "com.android.support:appcompat-v7:27.1.1"
-    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.android.support:appcompat-v7:26.1.0"
+    implementation "com.facebook.react:react-native:+"
+    implementation(project(":react-native-google-signin")){
+      exclude group: "com.google.android.gms" // very important
+    }
+    implementation 'com.google.android.gms:play-services-auth:16.0.1' // should be at least 15.0.0 to work with the most recent APIs
 }
 
 // Run this once to be able to run the application with BUCK
