--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.13.0",
+    "firebase-admin": "^6.1.0",
     "firebase-functions": "^2.0.0",
     "firebase-functions-helper": "^0.5.10",
     "lodash.toplainobject": "^4.2.0"
