--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,10 +26,7 @@ target 'snagit' do
   pod 'Fabric', '~> 1.7.5'
   pod 'Crashlytics', '~> 3.10.4'
   
-  pod 'FBSDKCoreKit';
-  pod 'FBSDKLoginKit';
-  pod 'FBSDKShareKit';
-  pod 'FBSDKMessengerShareKit';
+  pod 'FacebookSDK'
 
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
