--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -205,7 +205,7 @@ dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "com.facebook.react:react-native:+"
+    implementation "com.facebook.react:react-native:0.55.4"
     implementation(project(":react-native-google-signin")){
       exclude group: "com.google.android.gms" // very important
     }
